feat: analytics api
