# src/routers/spending.router.ts
@@ -1,5 +1,5 @@
 import { Router } from "express";
-import { HandleMakeSpending, HandleGetTransactions, HandleGetTransactionById } from "../controllers"; 
+import { HandleMakeSpending, HandleGetTransactions, HandleGetTransactionById, HandleSpendingAnalytics } from "../controllers"; 
 import { RequireAuth } from "../middleware";
 
 
@@ -8,4 +8,4 @@ export const SpendingRouter = Router()
 SpendingRouter.post('/spending', RequireAuth, HandleMakeSpending);
 SpendingRouter.get('/spending', RequireAuth, HandleGetTransactions);
 SpendingRouter.get('/spending/:id', RequireAuth, HandleGetTransactionById);
-// SpendingRouter.get('/spending/analytics', RequireAuth, )
+SpendingRouter.get('/analytics', RequireAuth, HandleSpendingAnalytics)
